--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -5,6 +5,7 @@ body{
 header{
   display: flex;
   justify-content: space-between;
+  padding: 43px 80px 45px;
 }
 
 .list_nav{
@@ -12,8 +13,34 @@ header{
   display: flex;
   justify-content: space-between;
   width: 100%;
+  height: 100%;
+}
+
+.list_nav li{
+  vertical-align: middle;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .list_nav > li + li {
   margin: 0 10px;
+}
+
+.wrap_board{
+  background: url(../starter-code/assets/home/desktop/image-hero-coffeepress.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  border-radius: 10px;
+  margin: 0 40px 0;
+}
+
+.board{
+  max-width: 40%;
+  padding:100px 0 80px 83px;
+}
+
+.board .title_board{
+  font-size: 72px;
 }
